--- a/simple.html
+++ b/simple.html
@@ -10,25 +10,26 @@
   <h1>My Shopping Page</h1>
   <div class="product-grid">
     <div class="product">
-      <img src="img/27.jpg" alt="Product 1" />
+      <img src="27.jpg" alt="Product 1" />
       <h2>Product 1</h2>
       <p>$10.00</p>
     </div>
     <div class="product">
-      <img src="img/28.jpg" alt="Product 2" />
+      <img src="28.jpg" alt="Product 2" />
       <h2>Product 2</h2>
       <p>$20.00</p>
     </div>
     <div class="product">
-      <img src="img/30.jpg" alt="Product 3" />
+      <img src="30.jpg" alt="Product 3" />
       <h2>Product 3</h2>
       <p>$15.00</p>
     </div>
     <div class="product">
-      <img src="img/51.jpg" alt="Product 4" />
+      <img src="51.jpg" alt="Product 4" />
       <h2>Product 4</h2>
       <p>$25.00</p>
     </div>
   </div>
 </body>
+
 </html>
